# ARTED

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build  configure.py  main.f90
FDTD/: CMakeLists.txt  FDTD.f90  beam.f90
GS/: CG.f90  Density_Update.f90  Fermi_Dirac_distribution.f90  Gram_Schmidt.f90  Occupation_Redistribution.f90  diag.f90  sp_energy.f90  write_GS_data.f90
RT/: CMakeLists.txt  Fourier_tr.f90  current.f90  current0.f90  dt_evolve.f90  dt_evolve_hpsi.f90  hpsi_RT.f90  init_Ac.f90  k_shift_wf.f90
cmake/: misc.cmake
common/: Exc_Cor.f90  Hartree.f90  Ylm_dYlm.f90  hpsi.f90  hpsi_stencil.f90  ion_force.f90  preprocessor.f90  psi_rho.f90  reentrance.f90  total_energy.f90
common/acc/: hpsi.f90
control/: CMakeLists.txt  arted_ms.f90  arted_sc.f90  control_ms.f90  control_sc.f90  inputfile.f90
data/: .gitignore
jobscript/: emulate_knl.sh  template_KNL.sh  testrun.sh
macrogrid/: macrogrid.f90
main/: ms.f90  sc.f90
modules/: CMakeLists.txt  backup_routines.f90  env_variables.f90  env_variables_internal.c  global_variables.f90  global_variables_ms.f90  global_variables_sc.f90  misc_routines.f90  nvtx.f90  opt_variables.f90  papi_wrap.c  performance_analyzer.f90  timelog.f90  timer.f90
perfcheck/: stencil_perf_check.f90  wrap_variables.f90
platform/: fujitsu-fx100.cmake  fujitsu-k.cmake  gnu-generic.cmake  intel-avx.cmake  intel-avx2.cmake  intel-knc.cmake  intel-knl.cmake  pgi-openmpi.cmake  pgi-openmpi_acc.cmake
preparation/: fd_coef.f90  init.f90  init_wf.f90  input_ps.f90  prep_ps.f90
script/: env_wrapper  mpirun.symm
stencil/: CMakeLists.txt
stencil/C/: current_explicit_vec.c  hpsi_compiler_vec.c  hpsi_explicit_vec.c  interop.h  total_energy_explicit_vec.c
stencil/C/AVX/: current.c  hpsi.c  total_energy.c
stencil/C/IMCI/: current.c  hpsi.c  total_energy.c
stencil/F90/: current.f90  current_compiler_vec.f90  hpsi.f90  hpsi_compiler_vec.f90  hpsi_compiler_vec_original.f90  hpsi_compiler_vec_simple.f90  total_energy.f90  total_energy_compiler_vec.f90
testtool/diana/: execute.py
